@@ -30,21 +30,8 @@ namespace transformations {
 void ParityZero7bit::execute(const Transaction *t,
     const ModSecString &in,
     ModSecString &out) noexcept {
-    unsigned char *input;
-
-    input = reinterpret_cast<unsigned char *>
-        (malloc(sizeof(char) * in.length()+1));
-
-    if (input == NULL) {
-        return;
-    }
-
-    memcpy(input, in.c_str(), in.length()+1);
-
-    inplace(input, in.length());
-
-    out.assign(reinterpret_cast<char *>(input), in.length());
-    free(input);
+    out.assign(in);
+    inplace(reinterpret_cast<unsigned char *>(&out[0]), out.length());
 }
 
 
